objects/CSD_Samsung_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>combine category with part name</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <label>GPL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Family__c</fullName>
        <label>GPL Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Description__c</fullName>
        <label>PN Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_indicator__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PN indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the ID of Part__c</description>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>CSD_Samsung_Sales_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Email__c</fullName>
        <label>Sales Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSD_Samsung_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the ID of sold to account</description>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CSD_Samsung_Sales_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_ID__c</fullName>
        <label>Sold to ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Name__c</fullName>
        <label>Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSD Samsung Mapping</label>
    <listViews>
        <fullName>Charles_Lee</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Part__c</columns>
        <columns>Sales__c</columns>
        <columns>Sales_Email__c</columns>
        <columns>GPL_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Email__c</field>
            <operation>equals</operation>
            <value>charleslee@te.com</value>
        </filters>
        <label>Charles Lee</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSD Samsung Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSD Samsung Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>